@@ -3,6 +3,7 @@
 
  * (trac #131) Added support for an external "Add-to-Cart" link and a "Whois box"
  * (trac #117) Added a "note" field to the order interface
+ * (trac #149) Fixed a data-integrity bug caused by the AccountDBO not deleting associated orders before deleting itself
 
 12/15/2006 - jdiamond
 =====================
